# flip-gui

./: .gitignore  CMakeLists.txt  Flip.cpp  Flip.fbp  Flip.h  FlipDataViewer.cpp  FlipDataViewer.h  FlipMain.cpp  FlipMain.h  FlipProgramLog.cpp  FlipProgramLog.h  FlipTemplateEditor.cpp  FlipTemplateEditor.h  MyApp.cpp  MyApp.h  README.md  app.manifest  cabjiFunctions.cpp  cabjiFunctions.h
include/: StartupArgumentsParser.cpp  StartupArgumentsParser.h
resources/images/menuIcons/: log_program_log.png~
